--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+I intend extend the lessons here to build hands and head gestures recognizing system.
+
 These are some programming exercise of Stanford Machine Learning Online Course.
 The algorithms were coded in python or matlab including:
 1.Anomaly Detection and Recommender Systems
